# white_elephant_bot

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  railway.json  requirements.txt
scripts/: delete_command.py  register_commands.py  register_emojify_last_message.py  register_summarize_command.py  register_summarize_since_last_message.py  register_summarize_since_my_last_message.py  register_test_command.py
src/: register_commands.py
src/white_elephant_bot/: application_commands.py  data_types.py  discord_interaction.py  validation.py  white_elephant.py
src/white_elephant_bot/applications/: emojify.py  perform_test.py  summarize.py  white_elephant.py
src/white_elephant_bot/utils/: async_function.py  fetch_messages.py
tests/: test_api_message_retrieval.py  test_message_retrieval.py  test_ping.py  test_slash.py  test_summarize_since_my_last_message.py
